# Mega-Happy-Sprite

./: .gitattributes  .gitignore  ABOUT  BUGS  COMPILE.windows  LICENSE  MANUAL  Makefile  Makefile.in  Makefile.windows  Makefile.windows.in  README  autogen.sh  bin2head  bmp.c  bmp.h  bottom.c  bottom.h  config.h  config.h.in  config.status  configure  configure.in  cursors.h  draw.c  draw.h  groups  mega.c  mega.h  mega.rc  mega_file.h  mega_file.l  proc.c  proc.h  project.config  skull.h  uu.c  uu.h  vdp.c  vdp.h
autom4te.cache/: output.0  requests  traces.0
examples/: 3d.mega  astro.mega  bob.mega  cube.mega  f1.mega  f2.mega  f3.mega  f4.mega  floppy.mega  goodhello.mega  house.mega  inyear.mega  keen.mega  keenback.mega  keenlook.mega  keenwatch.mega  m4.mega  metal.mega  on_fire.mega  phone1.mega  ship.mega  ship2.mega  sigflup.mega  sonic.mega  sonic2.mega  tile.mega  vaxback.mega  vr.mega
gui/: .gui.c.swp  BUGS  COPYING  Makefile  Makefile.in  Makefile.windows  Makefile.windows.in  TODO  bknob.xpm  bknob_point.xpm  csig  draw.c  draw.h  drop.c  drop.h  font.c  font.h  gui.c  gui.h  gui_types.h  knob.xpm  knob_point.xpm  libgui.h  link.c  link.h  load_save.c  load_save.h  menu.c  menu.h  realpath.c  realpath.h  sign  std_dialog.c  std_dialog.h  timer.c  timer.h
pic/: a.xpm  b.xpm  back.xcf  back.xpm  clear.xpm  clear_to_color.xpm  clob.xpm  default_overlay.xpm  fill.xpm  flip.xpm  line.xpm  minus.xpm  new.xpm  pal_hi_low.xpm  pic.xpm  pic_pat.xpm  plus.xpm  put_pal.xpm  put_pat.xpm  restore.xpm  save.xpm  scroll_a.xpm  scroll_a_edit.xpm  scroll_a_high.xpm  (+14 more)
(+6 files in other folders)
